--- a/css/main.css
+++ b/css/main.css
@@ -102,29 +102,39 @@ html {
 }
 
 body {
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: 'Tahoma', sans-serif;
   padding: 2em;
   font-size: 1.25em;
   height: 100%;
+  background-color: #4d004d;
 }
 
 .wrapper {
   display:flex; 
   justify-content: space-between;
-  font-weight: 700;
+  align-items: center;
+  font-weight: 300;
 }
 
 .div-1, .div-2, .div-3 {
   display:flex; 
   justify-content: center;
   align-items: center;
-  color: #fff;
-  line-height: 1.5em;
-  font-size: 1.6em;
-  background-color: #f16059;
-  height: 300px;
+  color: #e4a3df;
+  line-height: 1.25em;
+  font-size: 1em;
+  background-color: #4d004d;
+  height: 300;
   width: 30%;
+  padding-right: 20px;
+  padding-bottom: 20px;
+  padding-top: 20px;
+  border-right: 1px dashed hotpink;
 }
+
+
+
+
 
 
 
