--- a/css/main.css
+++ b/css/main.css
@@ -129,7 +129,10 @@ body {
   padding-right: 20px;
   padding-bottom: 20px;
   padding-top: 20px;
-  border-right: 1px dashed hotpink;
+}
+
+.div-1, .div-2 {
+  border-right: 1px dashed hotpink;  
 }
 
 
